...
        <item
            android:title="My Bookings"
            android:id="@+id/nav_bookings"
            android:icon="@drawable/ic_mybooking"/>
        <item
            android:title="Profile"
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_person_24"

            />


</menu>
