<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:elevation="8dp"
    android:padding="8dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_gravity="center"
        android:text="Edit Comment"
        android:textStyle="bold"
        android:textColor="#166BBF"
        android:layout_marginTop="6dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#4BC1D0D8"
        android:padding="20dp"
        android:hint="Add your comment"
        android:id="@+id/etComment"/>

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:text="Edit"/>

</LinearLayout>