<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraint"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".fragments.forget_password.screens.ConfirmationFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvNotice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirmation code has been sent to your email address."
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etFirst"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_verification"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:maxLength="1"
                android:inputType="number"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etSecond"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_verification"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:maxLength="1"
                android:inputType="number"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etThird"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_verification"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:maxLength="1"
                android:inputType="number"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etFourth"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_verification"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:maxLength="1"
                android:inputType="number"
                android:textStyle="bold" />



        </LinearLayout>
        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:text="Confirm"
            android:background="@drawable/bg_btn"
            android:layout_marginTop="18dp"
            style="@style/btnTheme"/>

        <TextView
            android:id="@+id/tvResend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="Havenot received reset code? Resend"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginRight="4dp"/>
    </LinearLayout>


    <Button
        android:id="@+id/btnPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="Previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="1.0" />



</androidx.constraintlayout.widget.ConstraintLayout>