...
        android:textColorHint="#989FAA"
        app:hintTextColor="#065DEF"
        app:boxStrokeColor="#065DEF"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSendMail"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:background="@drawable/bg_btn"
        android:layout_gravity="center"
        android:text="Send Email"
        android:layout_marginTop="10dp"
...
