...
                        app:boxStrokeColor="#1A36DF"
                        app:hintTextColor="#1A36DF"
                        android:layout_marginBottom="7dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etFn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />



...
                        android:textColorHint="#534646"
                        app:boxStrokeColor="#1A36DF"
                        app:hintTextColor="#1A36DF"
                        android:layout_marginBottom="7dp"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etLn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
...
                        android:id="@+id/rgGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Male"
                            android:textColor="#7E5540"
                            android:textSize="16sp"
                            android:layout_weight="1"
...
                        app:boxStrokeColor="#1A36DF"
                        app:hintTextColor="#1A36DF"
                        android:layout_marginBottom="7dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

...
                        app:boxStrokeColor="#1A36DF"
                        app:hintTextColor="#1A36DF"
                        android:layout_marginBottom="7dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etUn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />


                    </com.google.android.material.textfield.TextInputLayout>
...
                        app:boxStrokeColor="#1A36DF"
                        app:hintTextColor="#1A36DF"
                        android:layout_marginBottom="7dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etAd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />


                    </com.google.android.material.textfield.TextInputLayout>
...
                        app:boxStrokeColor="#1A36DF"
                        app:hintTextColor="#1A36DF"
                        android:layout_marginBottom="7dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etMb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="10"
                            android:inputType="number" />


...
                        app:boxStrokeColor="#1A36DF"
                        app:hintTextColor="#1A36DF"
                        android:layout_marginBottom="7dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etDOB"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:inputType="text" />


...
                        app:hintTextColor="#1A36DF"
                        android:layout_marginBottom="7dp"
                        app:passwordToggleEnabled="true"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPw"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

...
                        app:boxStrokeColor="#1A36DF"
                        app:hintTextColor="#1A36DF"
                        android:layout_marginBottom="7dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etCpw"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <CheckBox
                        android:id="@+id/cbCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="I agree each terms and conditions."/>
                </LinearLayout>


            </ScrollView>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="5dp"
                android:text="Register"
                android:layout_margin="6dp"
                android:background="@drawable/bg_btn"
...
